<resources>
    <string name="app_name">Horoskop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_zodiac_signs">ZodiacSignsActivity</string>


    <string name="description"> Astro Horoscope  1.0
    \n

        Copyright © ivyempress Inc.
    </string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="contact_us">Contact us</string>
    <string name="horoscope">Horoscope</string>
    <string name="title_activity_main">Main</string>
    <string name="content">You absorb the energies of those around you, and reflect them back like some kind of radiant mirror. Today conversation has a suggestion of spice about it, and you have some interesting information to divulge. If you are looking for that special person, you can impress with your charm and witty line of chat. You will prove too tantalizing to pass by.</string>
    <string name="horoscope_main">Horoscope</string>
    <string name="chinese_horoscope">Chinese horoscope</string>
    <string name="fortune_cookie">Fortune cookie</string>
    <string name="title_activity_chinese">ChineseActivity</string>
    <string name="title_activity_fortune">FortuneActivity</string>
    <string name="share">Share</string>
    <string name="headfortune">Crack to open your fortune!</string>
    <string name="calculate_sign">Calculate your sign</string>
    <string name="zodiac">Zodiac</string>
    <string name="title_activity_settings_notification_activitz">SettingsNotificationActivitz
    </string>
    <string name="daliy_notification">Daily notification</string>
    <string name="notifications">Notifications</string>
</resources>
