<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/silverbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tata.horoskop.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2C3E50">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/horoscope"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </android.support.v7.widget.Toolbar>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_zodiacHoroscopeLayout"
    android:layout_below="@id/toolbar" >

    <ImageView
        android:id="@+id/iv_zodiacHoroscope"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:onClick="openZodiacHoroscope"
        android:src="@drawable/horoscopeicon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_zodiacHoroscope"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/horoscope_main"
        android:textStyle="bold"
        android:textSize="20dp"/>

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_chineseHoroscope"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_zodiacHoroscopeLayout">

        <ImageView
            android:id="@+id/iv_chineseHoroscope"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:onClick="openChineseHoroscope"
            android:src="@drawable/chinesehoroscope" />

        <TextView
            android:layout_toRightOf="@+id/iv_chineseHoroscope"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/chinese_horoscope"
            android:textStyle="bold"
            android:textSize="20dp"/> />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_fortuneCookie"
        android:layout_below="@id/rl_chineseHoroscope">

    <ImageView
        android:id="@+id/iv_fortuneCookie"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:onClick="openFortuneCookie"
        android:src="@drawable/fortunecookie" />

    <TextView
        android:layout_toRightOf="@+id/iv_fortuneCookie"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:text="@string/fortune_cookie"
        android:textStyle="bold"
        android:textSize="20dp"/>/>

    </RelativeLayout>

</RelativeLayout>
