<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tata.horoskop.HomeActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/test1" />


    <TextView
        android:id="@+id/tv_headtext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_imagefortune1"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:text="@string/headfortune"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:textStyle="bold|italic" />


    <ImageView
        android:id="@+id/iv_imagefortune1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:onClick="fortuneClick"
        android:src="@drawable/fortune1" />


    <com.pedja1.fontwidget.widget.FTextView
        android:id="@+id/tv_scrooltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_imagefortune1"
        android:background="@drawable/fortunescrool"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingTop="50dp"
        android:text="When it cdsvasdvadsavsdvadsvadsvadsvadsvadsvadsvadsvadsis incorrect,asdfasdfdsafasdasdf it is, at least *authoritatively* incorrect.\n\t\t-- Hitchiker's Guide To The Galaxy"
        android:textColor="#000000"
        android:textSize="15sp"
        android:visibility="invisible"
        app:font="blackjack.ttf"/>

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_scrooltext"
        android:layout_alignParentRight="true"
        android:onClick="shareClick"
        android:text="@string/share"
        android:visibility="invisible"

        />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2C3E50"
        android:src="@drawable/test1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fortune_cookie"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

</RelativeLayout>
